# skills

./: LICENSE  README.md  python-type-checkers-eval.md
.agent/skills/prompt-injection-prevention/: SKILL.md  pyproject.toml
.agent/skills/prompt-injection-prevention/scripts/prompt_injection_prevention/: camel_defense.py  capability_manager.py  dual_llm.py  taint_tracker.py
.agent/skills/prompt-injection-prevention/scripts/tests/: test_camel_defense.py  test_dual_llm.py
.agent/skills/prompt-injection-prevention/src/prompt_injection_prevention/: dual_llm.py
.github/workflows/: ci.yml
evals/prompt-injection-prevention/: results.txt
prompt-injection-prevention/: .gitignore  README.md  SKILL.md  pyproject.toml  skills.md
prompt-injection-prevention/scripts/prompt_injection_prevention/: input_sanitizer.py  policy_engine.py
prompt-injection-prevention/scripts/tests/: test_capability_manager.py  test_dual_llm.py  test_input_sanitizer.py  test_policy_engine.py  test_taint_tracker.py
prompt-injection-prevention/src/prompt_injection_prevention/: __init__.py  camel_defense.py  capability_manager.py  input_sanitizer.py  policy_engine.py  taint_tracker.py
prompt-injection-prevention/src/prompt_injection_prevention.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
prompt-injection-prevention/tests/: test_camel_defense.py  test_capability_manager.py  test_dual_llm.py  test_input_sanitizer.py  test_policy_engine.py  test_taint_tracker.py
