[project]
name = "prompt-injection-prevention"
version = "0.1.0"
description = "Agent skill for preventing prompt injection attacks, inspired by the CaMeL (CApability-based Machine Learning) framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JC (Jonathan Chen)"},
]
keywords = ["prompt-injection", "llm-security", "camel", "agent-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[dependency-groups]
dev = ["ruff>=0.4", "ty>=0.0.1a1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_injection_prevention"]
